Arreglo de diseños, finalizado el responsive y finalizado el SEO de la página

--- a/IFM.html
+++ b/IFM.html
@@ -220,7 +220,7 @@
             <div class="content-img">
               <img
                 src="assets/images/medellin.jpg"
-                alt="Ubicaion de Innovate en Medellin"
+                alt="Ubicacion de IFM en Medellin"
                 id="colombia"
               />
               <h2>Medellin</h2>
@@ -228,7 +228,7 @@
             <div class="content-img">
               <img
                 src="assets/images/dallas.jpg"
-                alt="Ubicaion de Innovate en Dallas"
+                alt="Ubicacion de IFM en Dallas"
                 id="eeuu"
               />
               <h2>Dallas</h2>
@@ -236,7 +236,7 @@
             <div class="content-img">
               <img
                 src="assets/images/miami.jpg"
-                alt="Ubicaion de Innovate en Miami"
+                alt="Ubicacion de IFM en Miami"
                 id="eeuu"
               />
               <h2>Miami</h2>
@@ -244,7 +244,7 @@
             <div class="content-img">
               <img
                 src="assets/images/mexico.jpg"
-                alt="Ubicaion de Innovate en Mexico"
+                alt="Ubicacion de IFM en Mexico"
                 id="mexico"
               />
               <h2>Ciudad de Mexico</h2>
@@ -259,13 +259,13 @@
         </div>
         <div id="redes">
           <a href="https://www.instagram.com/innovativefootballmgmt/"
-            ><img src="assets/icons/instagram2.png" alt="Instagram de Innovate"
+            ><img src="assets/icons/instagram2.png" alt="Instagram IFM"
           /></a>
           <a href="https://www.facebook.com"
-            ><img src="assets/icons/linkedin2.png" alt="Facebook de Innovate"
+            ><img src="assets/icons/linkedin2.png" alt="Facebook IFM"
           /></a>
           <a href="https://www.whatsapp.com"
-            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp de Innovate"
+            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp IFM"
           /></a>
         </div>
       </footer>
