--- a/olimpia.html
+++ b/olimpia.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="css/olimpia/1366x768/responsive.css" />
     <link rel="stylesheet" href="css/olimpia/720x1600/responsive.css" />
     <link rel="stylesheet" href="css/olimpia/general.css" />
-    <link rel="stylesheet" href="css/olimpia/normalize.css">
+    <link rel="stylesheet" href="css/olimpia/normalize.css" />
     <link rel="icon" href="assets/icons/olimpiafavicon.ico" />
-    <script src="js/scroll.js"></script>
+    <script src="js/scroll.js" defer></script>
     <title>C.D. Olimpia</title>
   </head>
   <body>
     <div class="contain-father">
       <nav id="navbar">
         <div class="logo">
-          <img src="assets/icons/olimpialogorb.png" alt="logoExample" />
+          <img src="assets/icons/olimpialogorb.png" alt="Logo C.D. Olimpia" />
         </div>
         <div class="botones">
           <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
@@ -27,26 +27,37 @@
         </div>
         <div class="button_language" style="padding-right: 20px">
           <button id="languageToggle">English</button>
-          <script src="js/change_language.js"></script>
+          <script src="js/change_language.js" defer></script>
         </div>
       </nav>
 
       <header id="volver">
         <div class="static-image">
-          <img src="assets/images/workout1.jpg" alt="" />
+          <img
+            src="assets/images/workout1.jpg"
+            alt="Entrenamiento Imagen C.D. Olimpia 1"
+          />
         </div>
-        <img src="assets/icons/olimpialogorb.png" alt="Logo Principal" id="logo"/>
+        <img
+          src="assets/icons/olimpialogorb.png"
+          alt="Logo Principal C.D. Olimpia"
+          id="logo"
+        />
       </header>
 
       <section></section>
       <main>
         <div id="contain-1">
-          <img src="assets/images/workout2.jpg" alt="image" id="fondo" />
+          <img
+            src="assets/images/workout2.jpg"
+            alt="Entrenamiento Imagen C.D. Olimpia 2"
+            id="fondo"
+          />
           <div class="contain-text">
             <h1>C.D. OLIMPIA</h1>
             <br />
             <p
-              data-en="C.D. Olimpia is dedicated to the formation and development of young soccer players, offering soccer players, offering high quality training programs designed to foster talent and designed to foster talent and passion for the sport. Our mission is to nurture soccer skills and core values such as teamwork values such as teamwork, discipline and perseverance. discipline and perseverance. Through a combination of advanced training techniques advanced training techniques and a holistic approach, C.D. Olimpia is committed to committed to developing well-rounded athletes ready to meet the challenges challenges both on and off the field."
+              data-en="C.D. Olimpia is dedicated to the formation and development of young soccer players, offering high quality training programs designed to foster talent and passion for the sport. Our mission is to nurture soccer skills and core values such as teamwork, discipline and perseverance. Through a combination of advanced training techniques and a holistic approach, C.D. Olimpia is committed to developing well-rounded athletes ready to meet the challenges both on and off the field."
               data-es="C.D. Olimpia se dedica a la formación y desarrollo de jóvenes futbolistas, ofreciendo programas de entrenamiento de alta calidad diseñados para fomentar el talento y la pasión por el deporte. Nuestra misión es cultivar habilidades futbolísticas y valores fundamentales como el trabajo en equipo, la disciplina y la perseverancia. A través de una combinación de técnicas de entrenamiento avanzadas y un enfoque integral, C.D. Olimpia se compromete a desarrollar atletas completos y preparados para enfrentar los desafíos tanto dentro como fuera del campo de juego."
             >
               C.D. Olimpia se dedica a la formación y desarrollo de jóvenes
@@ -63,7 +74,10 @@
           <div class="contain-service">
             <div class="button-container" id="services-1">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img
+                  src="assets/svg/add_circle.svg"
+                  alt="Servicios de C.D. Olimpia 1"
+                />
               </button>
               <div id="content-service-1" class="content">
                 <h1>Servicio 1</h1>
@@ -72,7 +86,10 @@
             </div>
             <div class="button-container" id="services-2">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img
+                  src="assets/svg/add_circle.svg"
+                  alt="Servicios de C.D. Olimpia 2"
+                />
               </button>
               <div id="content-service-2" class="content">
                 <h1>Servicio 2</h1>
@@ -81,7 +98,10 @@
             </div>
             <div class="button-container" id="services-3">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img
+                  src="assets/svg/add_circle.svg"
+                  alt="Servicios de C.D. Olimpia 3"
+                />
               </button>
               <div id="content-service-3" class="content">
                 <h1>Servicio 3</h1>
@@ -90,7 +110,10 @@
             </div>
             <div class="button-container" id="services-4">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img
+                  src="assets/svg/add_circle.svg"
+                  alt="Servicios de C.D. Olimpia 4"
+                />
               </button>
               <div id="content-service-4" class="content">
                 <h1>Servicio 4</h1>
@@ -106,12 +129,16 @@
           <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
           <br />
           <p>
-            <img src="assets/svg/mail.svg" alt="email" />
+            <img src="assets/svg/mail.svg" alt="Email C.D. Olimpia" />
             info@innovativegroup.com
           </p>
           <br />
           <p>
-            <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
+            <img
+              src="assets/svg/contact_phone.svg"
+              alt="Contact Number Phone C.D. Olimpia"
+            />
+            +1 23456789
           </p>
         </div>
         <div class="content-ubi">
@@ -122,22 +149,34 @@
             <div class="content-img">
               <img
                 src="assets/images/medellin.jpg"
-                alt="img-ubi"
+                alt="Ubicacion de C.D. Olimpia en Medellín"
                 id="colombia"
               />
               <h2>Medellin</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
+              <img
+                src="assets/images/dallas.jpg"
+                alt="Ubicacion de C.D. Olimpia en Dallas"
+                id="eeuu"
+              />
               <h2>Dallas</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
+              <img
+                src="assets/images/miami.jpg"
+                alt="Ubicacion de C.D. Olimpia en Miami"
+                id="eeuu"
+              />
               <h2>Miami</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
-              <h2>Ciudad de mexico</h2>
+              <img
+                src="assets/images/mexico.jpg"
+                alt="Ubicacion de C.D. Olimpia en México"
+                id="mexico"
+              />
+              <h2>Ciudad de México</h2>
             </div>
           </div>
         </div>
@@ -148,14 +187,16 @@
           &copy; Innovative Football Management. All rights reserved.
         </div>
         <div id="redes">
-          <a href="instagram.com"
-            ><img src="assets/icons/instagram2.png" alt="Instagram"
+          <a href="https://www.instagram.com"
+            ><img
+              src="assets/icons/instagram2.png"
+              alt="Instagram C.D. Olimpia"
           /></a>
-          <a href="facebook.com"
-            ><img src="assets/icons/linkedin2.png" alt="Facebook"
+          <a href="https://www.facebook.com"
+            ><img src="assets/icons/linkedin2.png" alt="Facebook C.D. Olimpia"
           /></a>
-          <a href="whatsapp.com"
-            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
+          <a href="https://www.whatsapp.com"
+            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp C.D. Olimpia"
           /></a>
         </div>
       </footer>
