--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <link rel="stylesheet" href="css/index/main.css" />
     <link rel="stylesheet" href="css/index/normalize.css" />
     <link rel="icon" href="assets/icons/innovatefavicon.ico" />
-    <title>Innovative</title>
+    <!-- <title>Innovative</title> -->
+    <title>
+      Innovative Group | Deportes, Entretenimiento, Cultura y Negocios
+    </title>
   </head>
   <body>
     <main>
