Arreglo de diseños, finalizado el responsive y finalizado el SEO de la página

--- a/innov8.html
+++ b/innov8.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="css/innov8/1366x768/responsive.css" />
     <link rel="stylesheet" href="css/innov8/720x1600/responsive.css" />
     <!-- --------------------------------------------------------- -->
-     <link rel="stylesheet" href="css/innov8/general.css">
-     <link rel="stylesheet" href="css/innov8/normalize.css">
+    <link rel="stylesheet" href="css/innov8/general.css" />
+    <link rel="stylesheet" href="css/innov8/normalize.css" />
     <link rel="icon" href="assets/icons/innov8favicon.ico" />
-    <script src="js/scroll.js"></script>
+    <script src="js/scroll.js" defer></script>
     <title>Innov8</title>
   </head>
   <body>
     <div class="contain-father">
       <nav id="navbar">
         <div class="logo">
-          <img src="assets/icons/innov8logorb.png" alt="logoExample" />
+          <img src="assets/icons/innov8logorb.png" alt="Logo Innov8" />
         </div>
         <div class="botones">
           <a href="index.html" data-en="Home" data-es="Inicio">Inicio</a>
@@ -28,26 +28,37 @@
         </div>
         <div class="button_language" style="padding-right: 20px">
           <button id="languageToggle">English</button>
-          <script src="js/change_language.js"></script>
+          <script src="js/change_language.js" defer></script>
         </div>
       </nav>
 
       <header id="volver">
         <div class="static-image">
-          <img src="assets/images/marketing1.jpg" alt="" />
+          <img
+            src="assets/images/marketing1.jpg"
+            alt="Marketing Imagen Innov8"
+          />
         </div>
-        <img src="assets/icons/innov8logorb.png" alt="Logo Principal" id="logo"/>
+        <img
+          src="assets/icons/innov8logorb.png"
+          alt="Logo Principal de Innov8"
+          id="logo"
+        />
       </header>
 
       <section></section>
       <main>
         <div id="contain-1">
-          <img src="assets/images/marketing2.jpg" alt="image" id="fondo" />
+          <img
+            src="assets/images/marketing2.jpg"
+            alt="Marketing Imagen Innov8 2"
+            id="fondo"
+          />
           <div class="contain-text">
             <h1>Innov8 Marketing & Management</h1>
             <br />
             <p
-              data-en="Innov8 Marketing & Management specializes in brand development, strategic partnerships and creative management. development, strategic partnerships and creative management. Our mission is to is to transform ideas into successful realities through innovative and customized solutions. innovative and customized solutions. With a holistic approach, we offer services ranging from the creation of a strong brand identity to the implementation of marketing from the creation of a strong brand identity to the implementation of effective marketing strategies and the management of commercial alliances that enhance our clients' growth. our clients' growth. At Innov8, we are committed to to delivering exceptional results through close collaboration and limitless creativity."
+              data-en="Innov8 Marketing & Management specializes in brand development, strategic partnerships and creative management. Our mission is to transform ideas into successful realities through innovative and customized solutions. With a holistic approach, we offer services ranging from the creation of a strong brand identity to the implementation of effective marketing strategies and the management of commercial alliances that enhance our clients' growth. At Innov8, we are committed to delivering exceptional results through close collaboration and limitless creativity."
               data-es="Innov8 Marketing & Management se especializa en el desarrollo de marca, asociaciones estratégicas y gestión creativa. Nuestra misión es transformar las ideas en realidades exitosas a través de soluciones innovadoras y personalizadas. Con un enfoque integral, ofrecemos servicios que abarcan desde la creación de una identidad de marca sólida hasta la implementación de estrategias de marketing efectivas y la gestión de alianzas comerciales que potencian el crecimiento de nuestros clientes. En Innov8, nos comprometemos a brindar resultados excepcionales mediante una colaboración cercana y una creatividad sin límites."
             >
               Innov8 Marketing & Management se especializa en el desarrollo de
@@ -65,7 +76,10 @@
           <div class="contain-service">
             <div class="button-container" id="services-1">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img
+                  src="assets/svg/add_circle.svg"
+                  alt="Servicios de Innov8 1"
+                />
               </button>
               <div id="content-service-1" class="content">
                 <h1>Servicio 1</h1>
@@ -74,7 +88,10 @@
             </div>
             <div class="button-container" id="services-2">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img
+                  src="assets/svg/add_circle.svg"
+                  alt="Servicios de Innov8 2"
+                />
               </button>
               <div id="content-service-2" class="content">
                 <h1>Servicio 2</h1>
@@ -83,7 +100,10 @@
             </div>
             <div class="button-container" id="services-3">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img
+                  src="assets/svg/add_circle.svg"
+                  alt="Servicios de Innov8 3"
+                />
               </button>
               <div id="content-service-3" class="content">
                 <h1>Servicio 3</h1>
@@ -92,7 +112,10 @@
             </div>
             <div class="button-container" id="services-4">
               <button>
-                <img src="assets/svg/add_circle.svg" alt="services" />
+                <img
+                  src="assets/svg/add_circle.svg"
+                  alt="Servicios de Innov8 4"
+                />
               </button>
               <div id="content-service-4" class="content">
                 <h1>Servicio 4</h1>
@@ -108,12 +131,16 @@
           <h1 data-en="CONTACT" data-es="CONTACTO">CONTACTO</h1>
           <br />
           <p>
-            <img src="assets/svg/mail.svg" alt="email" />
+            <img src="assets/svg/mail.svg" alt="Email Innov8" />
             info@innovativegroup.com
           </p>
           <br />
           <p>
-            <img src="assets/svg/contact_phone.svg" alt="Phone" /> +1 23456789
+            <img
+              src="assets/svg/contact_phone.svg"
+              alt="Contact Number Phone Innov8"
+            />
+            +1 23456789
           </p>
         </div>
         <div class="content-ubi">
@@ -124,22 +151,34 @@
             <div class="content-img">
               <img
                 src="assets/images/medellin.jpg"
-                alt="img-ubi"
+                alt="Ubicacion de Innov8 en Medellín"
                 id="colombia"
               />
               <h2>Medellin</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/dallas.jpg" alt="img-ubi" id="eeuu" />
+              <img
+                src="assets/images/dallas.jpg"
+                alt="Ubicacion de Innov8 en Dallas"
+                id="eeuu"
+              />
               <h2>Dallas</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/miami.jpg" alt="img-ubi" id="eeuu" />
+              <img
+                src="assets/images/miami.jpg"
+                alt="Ubicacion de Innov8 en Miami"
+                id="eeuu"
+              />
               <h2>Miami</h2>
             </div>
             <div class="content-img">
-              <img src="assets/images/mexico.jpg" alt="img-ubi" id="mexico" />
-              <h2>Ciudad de mexico</h2>
+              <img
+                src="assets/images/mexico.jpg"
+                alt="Ubicacion de Innov8 en México"
+                id="mexico"
+              />
+              <h2>Ciudad de México</h2>
             </div>
           </div>
           <div class="content-img">
@@ -154,14 +193,14 @@
           &copy; Innovative Football Management. All rights reserved.
         </div>
         <div id="redes">
-          <a href="instagram.com"
-            ><img src="assets/icons/instagram2.png" alt="Instagram"
+          <a href="https://www.instagram.com"
+            ><img src="assets/icons/instagram2.png" alt="Instagram Innov8"
           /></a>
-          <a href="facebook.com"
-            ><img src="assets/icons/linkedin2.png" alt="Facebook"
+          <a href="https://www.facebook.com"
+            ><img src="assets/icons/linkedin2.png" alt="Facebook Innov8"
           /></a>
-          <a href="whatsapp.com"
-            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp"
+          <a href="https://www.whatsapp.com"
+            ><img src="assets/icons/whatsapp2.png" alt="Whatsapp Innov8"
           /></a>
         </div>
       </footer>
