Se optimizaron los archivos, eliminando todos los archivos de responsive innecesarios para añadirlos en un solo archivo modificable CSS

--- a/IFM.html
+++ b/IFM.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/IFM/1920x1080/responsive.css" />
-    <link rel="stylesheet" href="css/IFM/1366x768/responsive.css" />
-    <link rel="stylesheet" href="css/IFM/720x1600/responsive.css" />
-    <link rel="stylesheet" href="css/IFM/general.css" />
-    <link rel="stylesheet" href="css/IFM/normalize.css" />
+    <link rel="stylesheet" href="css/IFM/responsive.css">
     <link rel="icon" href="assets/icons/ifmfavicon.ico" />
     <script src="js/videos.js" defer></script>
     <script src="js/time-video.js" defer></script>
