Se optimizaron los archivos, eliminando todos los archivos de responsive innecesarios para añadirlos en un solo archivo modificable CSS

--- a/innov8.html
+++ b/innov8.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/innov8/1920x1080/responsive.css" />
-    <link rel="stylesheet" href="css/innov8/1366x768/responsive.css" />
-    <link rel="stylesheet" href="css/innov8/720x1600/responsive.css" />
-    <!-- --------------------------------------------------------- -->
-    <link rel="stylesheet" href="css/innov8/general.css" />
-    <link rel="stylesheet" href="css/innov8/normalize.css" />
+    <link rel="stylesheet" href="css/innov8/responsive.css" />
     <link rel="icon" href="assets/icons/innov8favicon.ico" />
     <script src="js/scroll.js" defer></script>
     <title>Innov8</title>
