--- a/olimpia.html
+++ b/olimpia.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/olimpia/1920x1080/responsive.css" />
-    <link rel="stylesheet" href="css/olimpia/1366x768/responsive.css" />
-    <link rel="stylesheet" href="css/olimpia/720x1600/responsive.css" />
-    <link rel="stylesheet" href="css/olimpia/general.css" />
-    <link rel="stylesheet" href="css/olimpia/normalize.css" />
+    <link rel="stylesheet" href="css/olimpia/responsive.css" />
     <link rel="icon" href="assets/icons/olimpiafavicon.ico" />
     <script src="js/scroll.js" defer></script>
     <title>C.D. Olimpia</title>
