--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
   <body>
     <main>
       <div class="button_language" style="padding-right: 20px">
-        <button id="languageToggle">English</button>
+        <button id="languageToggle">En / Es</button>
         <script src="js/change_language.js"></script>
       </div>
 
       <div class="image-contain" id="image-contain-1">
         <img src="assets/images/instagram1.jpeg" alt="Imagen de IFM 1" />
-        <img src="assets/images/instagram2.jpg" alt="Imagen de IFM 2" />
+        <!-- <img src="assets/images/instagram2.jpg" alt="Imagen de IFM 2" /> -->
       </div>
       <div class="image-contain" id="image-contain-2">
         <img src="assets/images/inicio1.jpg" alt="Imagen de C.D. Olimpia 1" />
-        <img src="assets/images/inicio2.jpg" alt="Imagen de C.D. Olimpia 2" />
+        <!-- <img src="assets/images/inicio2.jpg" alt="Imagen de C.D. Olimpia 2" /> -->
       </div>
       <div class="image-contain" id="image-contain-3">
         <img src="assets/images/inicio3.png" alt="Imagen de Innov8 1" />
-        <img src="assets/images/inicio4.jpg" alt="Imagen de Innov8 2" />
+        <!-- <img src="assets/images/inicio4.jpg" alt="Imagen de Innov8 2" /> -->
       </div>
 
       <button id="position-left" data-en="INTRODUCTION" data-es="INTRODUCCION">
